--- a/05_photo.ipynb
+++ b/05_photo.ipynb
@@ -15,8 +15,9 @@
     "\n",
     "Фотофиксация в прикассовой зоне поможет определять возраст клиентов, чтобы:\n",
     "\n",
-    "Анализировать покупки и предлагать товары, которые могут заинтересовать покупателей этой возрастной группы;\n",
-    "Контролировать добросовестность кассиров при продаже алкоголя.\n",
+    "- Анализировать покупки и предлагать товары, которые могут заинтересовать покупателей этой возрастной группы;\n",
+    "- Контролировать добросовестность кассиров при продаже алкоголя.\n",
+    "\n",
     "Постройте модель, которая по фотографии определит приблизительный возраст человека. В вашем распоряжении набор фотографий людей с указанием возраста."
    ]
   },
@@ -31,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Файл ***labels.csv***"
+    "### Файл _labels.csv_"
    ]
   },
   {
