--- a/10_protection_of_personal_data.ipynb
+++ b/10_protection_of_personal_data.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Содержание<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Загрузка-данных\" data-toc-modified-id=\"Загрузка-данных-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Загрузка данных</a></span><ul class=\"toc-item\"><li><span><a href=\"#Открываем-файл-с-данными-и-изучаем-общую-информацию\" data-toc-modified-id=\"Открываем-файл-с-данными-и-изучаем-общую-информацию-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Открываем файл с данными и изучаем общую информацию</a></span></li><li><span><a href=\"#Проверяем-полные-дубликаты\" data-toc-modified-id=\"Проверяем-полные-дубликаты-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Проверяем полные дубликаты</a></span></li><li><span><a href=\"#Изменения-типа-данных\" data-toc-modified-id=\"Изменения-типа-данных-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Изменения типа данных</a></span></li></ul></li><li><span><a href=\"#Умножение-матриц\" data-toc-modified-id=\"Умножение-матриц-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Умножение матриц</a></span><ul class=\"toc-item\"><li><span><a href=\"#Признаки-умножают-на-обратимую-матрицу.-Изменится-ли-качество-линейной-регрессии?-(Её-можно-обучить-заново.)\" data-toc-modified-id=\"Признаки-умножают-на-обратимую-матрицу.-Изменится-ли-качество-линейной-регрессии?-(Её-можно-обучить-заново.)-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Признаки умножают на обратимую матрицу. Изменится ли качество линейной регрессии? (Её можно обучить заново.)</a></span></li></ul></li><li><span><a href=\"#Алгоритм-преобразования\" data-toc-modified-id=\"Алгоритм-преобразования-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Алгоритм преобразования</a></span></li><li><span><a href=\"#Проверка-алгоритма\" data-toc-modified-id=\"Проверка-алгоритма-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Проверка алгоритма</a></span><ul class=\"toc-item\"><li><span><a href=\"#Создадим-обратимую-матрицу-P\" data-toc-modified-id=\"Создадим-обратимую-матрицу-P-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Создадим обратимую матрицу P</a></span></li><li><span><a href=\"#Проверим-обратимость\" data-toc-modified-id=\"Проверим-обратимость-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Проверим обратимость</a></span></li><li><span><a href=\"#Разделим-данные-на-тренировочную-выборку-и-целевой-признак\" data-toc-modified-id=\"Разделим-данные-на-тренировочную-выборку-и-целевой-признак-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Разделим данные на тренировочную выборку и целевой признак</a></span></li><li><span><a href=\"#Сравним-расчет-Линейной-регрессии-по-формулам-и-через-библиотеку-sklearn\" data-toc-modified-id=\"Сравним-расчет-Линейной-регрессии-по-формулам-и-через-библиотеку-sklearn-4.4\"><span class=\"toc-item-num\">4.4&nbsp;&nbsp;</span>Сравним расчет Линейной регрессии по формулам и через библиотеку sklearn</a></span></li><li><span><a href=\"#Функция-для-модели-Линейной-регрессии\" data-toc-modified-id=\"Функция-для-модели-Линейной-регрессии-4.5\"><span class=\"toc-item-num\">4.5&nbsp;&nbsp;</span>Функция для модели Линейной регрессии</a></span></li><li><span><a href=\"#R2-для-исходных-данных\" data-toc-modified-id=\"R2-для-исходных-данных-4.6\"><span class=\"toc-item-num\">4.6&nbsp;&nbsp;</span>R2 для исходных данных</a></span></li><li><span><a href=\"#R2-для-зашифрованных-данных\" data-toc-modified-id=\"R2-для-зашифрованных-данных-4.7\"><span class=\"toc-item-num\">4.7&nbsp;&nbsp;</span>R2 для зашифрованных данных</a></span></li></ul></li><li><span><a href=\"#Итоговый-вывод\" data-toc-modified-id=\"Итоговый-вывод-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Итоговый вывод</a></span></li><li><span><a href=\"#Чек-лист-проверки\" data-toc-modified-id=\"Чек-лист-проверки-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Чек-лист проверки</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Загрузка-данных\" data-toc-modified-id=\"Загрузка-данных-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Загрузка данных</a></span><ul class=\"toc-item\"><li><span><a href=\"#Открываем-файл-с-данными-и-изучаем-общую-информацию\" data-toc-modified-id=\"Открываем-файл-с-данными-и-изучаем-общую-информацию-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Открываем файл с данными и изучаем общую информацию</a></span></li><li><span><a href=\"#Проверяем-полные-дубликаты\" data-toc-modified-id=\"Проверяем-полные-дубликаты-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Проверяем полные дубликаты</a></span></li><li><span><a href=\"#Изменения-типа-данных\" data-toc-modified-id=\"Изменения-типа-данных-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Изменения типа данных</a></span></li></ul></li><li><span><a href=\"#Умножение-матриц\" data-toc-modified-id=\"Умножение-матриц-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Умножение матриц</a></span><ul class=\"toc-item\"><li><span><a href=\"#Признаки-умножают-на-обратимую-матрицу.-Изменится-ли-качество-линейной-регрессии?-(Её-можно-обучить-заново.)\" data-toc-modified-id=\"Признаки-умножают-на-обратимую-матрицу.-Изменится-ли-качество-линейной-регрессии?-(Её-можно-обучить-заново.)-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Признаки умножают на обратимую матрицу. Изменится ли качество линейной регрессии? (Её можно обучить заново.)</a></span></li></ul></li><li><span><a href=\"#Алгоритм-преобразования\" data-toc-modified-id=\"Алгоритм-преобразования-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Алгоритм преобразования</a></span></li><li><span><a href=\"#Проверка-алгоритма\" data-toc-modified-id=\"Проверка-алгоритма-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Проверка алгоритма</a></span><ul class=\"toc-item\"><li><span><a href=\"#Создадим-обратимую-матрицу-P\" data-toc-modified-id=\"Создадим-обратимую-матрицу-P-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Создадим обратимую матрицу P</a></span></li><li><span><a href=\"#Проверим-обратимость\" data-toc-modified-id=\"Проверим-обратимость-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Проверим обратимость</a></span></li><li><span><a href=\"#Разделим-данные-на-тренировочную-выборку-и-целевой-признак\" data-toc-modified-id=\"Разделим-данные-на-тренировочную-выборку-и-целевой-признак-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Разделим данные на тренировочную выборку и целевой признак</a></span></li><li><span><a href=\"#Сравним-расчет-Линейной-регрессии-по-формулам-и-через-библиотеку-sklearn\" data-toc-modified-id=\"Сравним-расчет-Линейной-регрессии-по-формулам-и-через-библиотеку-sklearn-4.4\"><span class=\"toc-item-num\">4.4&nbsp;&nbsp;</span>Сравним расчет Линейной регрессии по формулам и через библиотеку sklearn</a></span></li><li><span><a href=\"#Функция-для-модели-Линейной-регрессии\" data-toc-modified-id=\"Функция-для-модели-Линейной-регрессии-4.5\"><span class=\"toc-item-num\">4.5&nbsp;&nbsp;</span>Функция для модели Линейной регрессии</a></span></li><li><span><a href=\"#R2-для-исходных-данных\" data-toc-modified-id=\"R2-для-исходных-данных-4.6\"><span class=\"toc-item-num\">4.6&nbsp;&nbsp;</span>R2 для исходных данных</a></span></li><li><span><a href=\"#R2-для-зашифрованных-данных\" data-toc-modified-id=\"R2-для-зашифрованных-данных-4.7\"><span class=\"toc-item-num\">4.7&nbsp;&nbsp;</span>R2 для зашифрованных данных</a></span></li></ul></li><li><span><a href=\"#Итоговый-вывод\" data-toc-modified-id=\"Итоговый-вывод-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Итоговый вывод</a></span></li></ul></div>"
    ]
   },
   {
@@ -1148,39 +1148,6 @@
     "Подготовили алгоритм для преобразования признаков.\n",
     "\n",
     "В результате проверки алгоритма на исследуемых данных была подобрана случайным образом обратимая матрица $P$ для шифрования данных. Полученные метрики качества отличаются незначительно, что доказывает правильность работы алгоритма.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Чек-лист проверки"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Поставьте 'x' в выполненных пунктах. Далее нажмите Shift+Enter."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- [x]  Jupyter Notebook открыт\n",
-    "- [x]  Весь код выполняется без ошибок\n",
-    "- [x]  Ячейки с кодом расположены в порядке исполнения\n",
-    "- [x]  Выполнен шаг 1: данные загружены\n",
-    "- [x]  Выполнен шаг 2: получен ответ на вопрос об умножении матриц\n",
-    "    - [x]  Указан правильный вариант ответа\n",
-    "    - [x]  Вариант обоснован\n",
-    "- [x]  Выполнен шаг 3: предложен алгоритм преобразования\n",
-    "    - [x]  Алгоритм описан\n",
-    "    - [x]  Алгоритм обоснован\n",
-    "- [x]  Выполнен шаг 4: алгоритм проверен\n",
-    "    - [x]  Алгоритм реализован\n",
-    "    - [x]  Проведено сравнение качества моделей до и после преобразования"
    ]
   }
  ],
@@ -2478,7 +2445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
